# algorithmic-benchmark-suite-rust

./: .gitignore  Cargo.toml  README.md
doc/: binary_search.md  bubble_sort.md  linked_list.md
modern_rust/benchmarks/: binary_search_benchmark.rs  bubble_sort_benchmark.rs  linked_list_benchmark.rs
modern_rust/src/: lib.rs
modern_rust/src/search/: binary_search.rs
modern_rust/src/sort/: bubble_sort.rs
modern_rust/src/structures/: linked_list.rs
modern_rust/tests/: binary_search_test.rs  bubble_sort_test.rs  linked_list_test.rs
selected_algorithms/: binary_search.c
